# scan2pdf

./: .gitignore  LICENSE  README-zh.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
scan2pdf/: __init__.py  __main__.py  cli.py  color_detector.py  font_manager.py  hocr_parser.py  ocr_engine.py  pdf_generator.py  pdf_merger.py  pdf_splitter.py  pipeline.py  text_cleaner.py
tests/: test_color_detector.py  test_hocr_parser.py  test_text_cleaner.py
