[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scan2pdf"
version = "0.1.0"
description = "Convert scanned PDF books to compact text PDFs with OCR"
requires-python = ">=3.10"
dependencies = [
    "pikepdf>=8.0",
    "pypdf>=3.0",
    "reportlab>=4.0",
    "lxml>=4.9",
    "Pillow>=9.0",
]

[project.optional-dependencies]
fast = [
    "pdf2image>=1.16",  # faster page rendering via poppler
]

[project.scripts]
scan2pdf = "scan2pdf.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pytest>=8.0",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
